@@ -1,6 +1,8 @@
 Changes since version 3.2.0
 ---------------------------
 
+- Fixed Communicator.isShutdown, which always returned false.
+
 - Added support for protected class data members using the new
   metadata tag ["protected"]. The tag can be applied to a Slice class
   or to individual data members.
